Update themed elements with new colors

--- a/src/sass/base/colors/_given-colors.scss
+++ b/src/sass/base/colors/_given-colors.scss
@@ -51,6 +51,9 @@
   /* Body Background */
   $color-background:            $color-gray-2;
 
+  /* Focus */
+  $color-focus:                 rgba($color-blue-light, .6);
+
   /* Typography */
   $color-text:                  $color-black;
   $color-subtext:               $color-gray-4;
