--- a/src/sass/modules/forms/card-controls.scss
+++ b/src/sass/modules/forms/card-controls.scss
@@ -1,5 +1,5 @@
 $card-checkbox--active: $color-blue !default; //Color of checkbox and card when checked
-$card-checkbox--focus: $color-blue-light !default; //Color of border around card-checkbox when focused
+$card-checkbox--focus: $color-focus !default; //Color of border around card-checkbox when focused
 $card-disabled-background: $color-gray-3 !default;
 $card-disabled-border: $color-gray-4 !default;
 $card-checkbox--padding: 1rem !default; //Padding of checkbox
