--- a/src/sass/base/colors/_given-colors.scss
+++ b/src/sass/base/colors/_given-colors.scss
@@ -77,7 +77,7 @@
   $button-gray-text:            $color-black;
 
   /* Icons */
-  $color-icon-primary:          $color-subtext;
+  $color-icon-primary:          $color-gray-4;
 
   /* Shadows */
   $color-shadow:                #3c4043;
