--- a/src/sass/modules/typography/_typography.scss
+++ b/src/sass/modules/typography/_typography.scss
@@ -47,13 +47,13 @@ $font-family-body:      "Source Sans Pro", sans-serif;
 }
 
 body {
-  background-color: $gray-100;
+  background-color: $color-background;
   font-family: $font-family-body;
   font-size: $font-size-normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: $gray-900;
+  color: $color-text;
   font-family: $font-family-header;
   font-weight: $font-weight-semibold;
   margin: 0;
@@ -68,13 +68,13 @@ small, .font-size--small  { font-size: $font-size-small; }
 .font-size--xsmall        { font-size: $font-size-xsmall; }
 
 a {
-  color: $blue;
+  color: $color-link;
   cursor: pointer;
   font-weight: $font-weight-semibold;
   text-decoration: none;
 
   &:hover, &:focus {
-    color: $blue-400;
+    // opacity: .7;
     text-decoration: underline;
     text-decoration-color: inherit;
   }
@@ -83,16 +83,16 @@ a {
     text-decoration: none;
     display: inline-block;
   }
-  
+
   &.no-decoration {
     text-decoration: none;
-    color: $gray-900;
+    color: $color-text;
     font-weight: $font-weight-normal;
   }
 }
 
 p, li.text-list_item {
-  color: $brand-black;
+  color: $color-black;
   font-size: $font-size-normal;
   line-height: $space-l;
   margin: 0;
