--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -116,8 +116,8 @@ $sides: (
 .fixed { position: fixed !important; }
 .relative { position: relative !important; }
 
-.text-color--white { color: $white; }
-.text-color--black { color: $black; }
+.text-color--white { color: $color-white; }
+.text-color--black { color: $color-black; }
 .text-color--gray, .text-color--grey { color: $gray; }
 .text-color--blue { color: $blue; }
 .text-color--green { color: $green; }
