--- a/src/sass/example-page/typography.scss
+++ b/src/sass/example-page/typography.scss
@@ -49,7 +49,7 @@ blockquote {
   &:before {
     content: "";
     border-radius: 30px;
-    color: $white;
+    color: $color-white;
     font-size: 18px;
     font-weight: 600;
     line-height: 0;
