--- a/src/sass/modules/table/table.scss
+++ b/src/sass/modules/table/table.scss
@@ -208,7 +208,7 @@ $table--border: $color-gray-3-dark !default;
 .table--container,
 .card-table {
   .table {
-    background-color: $white;
+    background-color: $color-white;
     font-size: $font-size-small;
     margin: 0;
     max-width: 100%;
