--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -19,7 +19,7 @@ This is an EXPERIMENT and is not ready to be included in production!
 //Variables
 $animation-time: 0.3s;
 $sidebar-highlight:  #9D6CDE;
-$sidebar-text-color: $white;
+$sidebar-text-color: $color-white;
 $sidebar-width: 12rem;
 $sidebar-background: #354052;
 
@@ -150,7 +150,7 @@ $sidebar-background: #354052;
   }
 
   .profile-name {
-    color: $white;
+    color: $color-white;
     font-size: 1.25rem;
     font-weight: 600;
     grid-column: 1 / 3;
@@ -160,7 +160,7 @@ $sidebar-background: #354052;
   }
 
   .profile-email {
-    color: $white;
+    color: $color-white;
     grid-column: 1 / 3;
   }
 
@@ -173,7 +173,7 @@ $sidebar-background: #354052;
 
     margin-left: auto;
 
-    i:before { color: $white; }
+    i:before { color: $color-white; }
 
     float: right;//fallback
   }
